@@ -1,6 +1,6 @@
 {
-  "count": 29,
-  "uniques": 10,
+  "count": 37,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 9,
+      "uniques": 5
     }
   ]
 }
