@@ -1,3 +1,9 @@
+2022-05-07T01:21:11Z:
+* notice: last 14d: all unq: 37 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 1818 358 / 1847 378
+* notice: next accum: outdated-all outdated-unq / all unq: 1818 358 / 1855 382
+* notice: prev json diff // prev day diff: unq all: +4 +8 / -0 -0 // +4 +8 / -0 -0
+
 2022-05-06T16:28:14Z:
 * notice: last 14d: all unq: 29 10
 * notice: prev accum: outdated-all outdated-unq / all unq: 1817 357 / 1846 377
